# glmutils

./: .gitignore  README.md  pyproject.toml
scripts/: demo.py
src/glmutils/: __init__.py
